--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -31,7 +31,7 @@
 <br><%= f.label :meta_description %><br>
 <%= f.text_field :meta_description %>
 
-<br><%= f.label "Collaboration" %><br>
+<br><span>(Optional) If you are writing an article with another writer, you may put their email here to share the article with them.</span><br>
 <%= f.text_field :collaboration %>
 
 <% if @post.approved == true %>
