--- a/app/assets/stylesheets/_userprofile.css.scss
+++ b/app/assets/stylesheets/_userprofile.css.scss
@@ -1,3 +1,38 @@
+.profiles--flex {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  border-bottom: 1px solid #E9E9E9;
+  margin-bottom: 20px;
+  .flex--profile {
+    padding: 30px 0 30px 30px;
+    margin: 0;
+    .profiles {
+      display: flex;
+      flex-direction: column;
+      h6 {
+        text-align: center;
+        margin: 10px 0 0 0;
+      }
+      h6 a {
+        text-decoration: none;
+        font-size: 1rem;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+      a {
+        margin: 0 auto;
+      }
+    }
+  }
+}
+
+.submitted--articles {
+  border-bottom: 1px solid #E9E9E9;
+  margin-bottom: 20px;
+}
+
 .box {
   position:relative;
   vertical-align: middle;
@@ -138,12 +173,12 @@
 
 .impressions {
   text-align: center;
-
 }
 
 .profile_img {
+  max-width: 80px;
   min-width: 80px;
-  width: 80px;
+  width: 80px !important;
   height: 80px;
   border-radius: 50%;
 }
@@ -157,6 +192,14 @@
   padding: 5px;
   text-decoration: none;
   float: right;
+}
+
+.newpost--new--profile {
+  color: white;
+  background-color: #2a2a2a;
+  border: 1px solid #2a2a2a;
+  padding: 10px 25px;
+  text-decoration: none;
 }
 
 #background {
@@ -234,7 +277,6 @@
 
   .editlink--profile {
     margin-top: 10px;
-    width: 150px;
     text-align: center;
 
     a {
@@ -250,7 +292,6 @@
 }
 
 .new--writer--wrapper {
-  border-top: 1px solid #E5E5E5;
   #waiting--for--approval {
     display: flex;
     flex-direction: row;
@@ -324,35 +365,33 @@
   justify-content: space-between;
   border-bottom: 1px solid #E9E9E9;
   margin-bottom: 20px;
-  padding-bottom: 20px;
+  padding: 10px 30px 20px 30px;
 
   .inside--item {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+    h6 {
+      margin: 0;
+    }
     a {
       vertical-align: middle;
       line-height: 30px;
-      margin-left: 10px;
+      margin-left: 7px;
+      color: #545454;
     }
   }
 
-
-  #post-title {
-    margin: 0;
-    a {
-      font-size: 20px;
-      color: #545454;
+  a {
       text-decoration: none;
       &:hover {
-        color: $highlight;
+        text-decoration: underline;
       }
-    }
   }
 
   #date {
     float: right;
-    font-size: 20px;
+    font-size: 18px;
     font-family: "pacifico";
     color: #545454;
     margin: 0;
@@ -467,6 +506,18 @@
       margin: 0;
       .box {
         margin: 0;
+      }
+    }
+  }
+  .new--writer--wrapper {
+    .skinny_wrapper {
+      #waiting--for--approval {
+        flex-direction: column-reverse;
+        .new--writer--flex--two {
+          margin-left: 0;
+          border-left: none;
+          padding-left: 0;
+        }
       }
     }
   }
