--- a/app/assets/stylesheets/onboarding.css.scss
+++ b/app/assets/stylesheets/onboarding.css.scss
@@ -3,6 +3,26 @@
 @import 'welcome';
 @import "category";
 @import "userprofile";
+@import "pages";
+
+@media (max-width: 980px) {
+   .nav-title {
+     display: inline-block !important;
+   }
+}
+
+#edit--profile {
+  .add_link input {
+    margin-left: 0px !important;
+  }
+  .social input {
+    padding-left: 30px;
+  }
+}
+
+#main_navigation {
+  margin: 0 !important;
+}
 
 #banner {
   width: 100%;
@@ -14,11 +34,24 @@
   width: 100%;
 }
 
+.flex--p {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
 .img_profile_example {
   max-width: 600px;
   width: 100%;
   display: block;
   margin: 0 auto;
+}
+
+.border {
+  nav {
+    .nav-title {
+      flex-grow: 2;
+    }
+  }
 }
 
 .number_wrapper {
@@ -143,6 +176,10 @@ h5, h3 {
 
 .initial--training--wrapper {
   margin-top: 20px;
+  p, ul, li {
+    margin: 10px;
+    font-size: 15px;
+  }
   .tab {
     display: flex;
     width: 100%;
@@ -154,10 +191,6 @@ h5, h3 {
     span {
       font-weight: 600;
       color: black;
-    }
-    p {
-      margin: 10px;
-      font-size: 15px;
     }
     img {
       width: 25px;
