--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -47,7 +47,7 @@
               <i class="fa fa-bars toggle_menu" style="color: black;"></i>
             </div>
             <div class="banner_item" style="text-align: center;">
-              <a href="/"><img id="name" src="https://i.ibb.co/jJcQ2zh/teenmag2.png"/></a>
+              <a href="/users/<%= current_user.slug %>"><img id="name" src="https://i.ibb.co/jJcQ2zh/teenmag2.png"/></a>
             </div>
             <div class="banner_item" style="text-align: right;">
               <div class="social-media">
@@ -56,6 +56,23 @@
                 <a class="link" href="https://twitter.com/TheTeenMagazin_" target="_blank"><i class="fa fa-twitter" aria-hidden="false"></i></a>
                 <a class="link" href="https://www.instagram.com/theteenmagazine_" target="_blank"><i class="fa fa-instagram" aria-hidden="false"></i></a>
               </div>
+            </div>
+          </div>
+          <div class="border" style="border-bottom: 1px solid rgba(0,0,0,0.1); border-top: 1px solid rgba(0,0,0,0.1); margin-top: 0 !important;">
+            <div class="skinny_wrapper">
+              <nav class="nav_article">
+                <%= link_to "The Teen Magazine", root_path, class: "nav-title"%>
+                <% if current_user && (current_user.admin? || current_user.editor?) %>
+                  <%= link_to "Users", users_path, class: "link" %>
+                <% end %>
+                <% if user_signed_in? %>
+                  <%= link_to "Dashboard", user_path(current_user), class: "link" %>
+                  <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "link" %>
+                <% else %>
+                    <a class="link" href="/contacts/new">Contact</a>
+                    <a class="link" href="/apply">Apply</a>
+                <% end %>
+              </nav>
             </div>
           </div>
         </header>
