--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -104,7 +104,7 @@
 
   <div id="content">
     <div class="flex_wrapper_content">
-      <div>
+      <div class="post_wrapper">
         <div class="post_content">
           <%= markdown @post.content %>
         </div>
