--- a/app/views/users/dashboard/_new_writer.html.erb
+++ b/app/views/users/dashboard/_new_writer.html.erb
@@ -3,99 +3,74 @@
     <div id="waiting--for--approval">
       <div style="padding-top: 30px; width: 100%;">
         <div class="flex--item">
-          <div class="overlay">
-            <img src="http://img.icons8.com/metro/26/000000/lock.png" class="icon">
-            <h5>Your profile is waiting to be reviewed</h5>
-          </div>
+          <% if @user.submitted_profile == true && @user.approved_profile == false %>
+              <div class="overlay">
+                <img src="http://img.icons8.com/metro/26/000000/lock.png" class="icon">
+                <h5>Your profile is waiting to be reviewed</h5>
+              </div>
+          <% elsif @user.submitted_profile == false && @user.approved_profile == false %>
+              <div class="overlay">
+                <img src="http://img.icons8.com/metro/26/000000/lock.png" class="icon">
+                <h5>Your profile was rejected. Please make changes and submit again.</h5>
+              </div>
+          <% else %>
+              <style>
+                .flex--profile {
+                  opacity: 1 !important;
+                }
+              </style>
+          <% end %>
           <%= render 'profile' %>
         </div>
         <div class="initial--training--wrapper">
-          <h1 id="page_title">Training modules are not complete</h1>
-          <div class="tab" id="tab1">
-            <p><span>Module 1:</span> Brainstorming and Search Analysis</p>
-            <%= image_tag "downarrow.png" %>
-          </div>
-          <div class="drop--down tab1--drop--down hidden">
-            <!-- brainstorming a BUNCH of potential topics -->
-            <!-- actually have to write them down in text box? -->
-            <p>For years, people have been talking about “Keyword Research”.  That made sense in the days where using certain words in your headlines and in your posts would help you rank for searches including those words.  But that’s not how search works anymore, which is why “Keyword Research” is now a thing of the past.</p>
-            <div class="flex--start">
-              <p>0% completed</p>
-              <%= link_to "Start", "/choosing-a-topic", class: "button_style" %>
+          <h1 id="page_title">Welcome to The Teen Magazine!</h1>
+          <p>When you publish your first article, you will become an official writer for The Teen Magazine and will receive your own
+          author page.</p>
+          <p>To Become an Official Writer:</p>
+          <ol>
+            <li>Introduce yourself to the <a target="_blank" href="https://www.facebook.com/groups/615063885673363/">Facebook group</a></li>
+            <li>Read through the resources found at the bottom of your dashboard</li>
+            <li>Pick a topic to write about from the <a target="_blank" href="https://docs.google.com/spreadsheets/d/1I-za5WKWPTQWiC2sAGBHZbjsOjb74EUZgvCAfQ4dU9I/edit?fbclid=IwAR2FYXYop0qny_8h6EqejNLLOEcnPai2q-X-L5ik3REak8SizW6-K18jyY4#gid=0">Google Sheets</a> or choose your own. If you are unsure what to write about, you can always ask for advice/ideas from other writers in the Facebook group. </li>
+            <li><a href="/posts/new">Write your first article</a> and submit it for review. Our amazing editors will look it over and give you
+            feedback.</li>
+          </ol>
+          <p>When you've completed steps 1 - 3, you can start writing your first article. </p>
+          <% if @user_posts.count == 0 %>
+            <h1 id="page_title">Your saved/submitted articles will show up here</h1>
+          <% else %>
+            <h1 id="page_title">Your saved/submitted articles</h1>
+          <% end %>
+          <% @user_posts.each do |post| %>
+          <div class="flex--postlist--item">
+            <div class="inside--item">
+              <% if post.approved && post.after_approved == true %>
+              <%= image_tag "published.png", class: "icon" %>
+              <% elsif post.waiting_for_approval && (post.approved == nil || post.approved == false) %>
+              <%= image_tag "waiting.png", class: "icon" %>
+              <% elsif post.approved && post.after_approved == nil %>
+              <%= image_tag "approved.png", class: "icon" %>
+              <% else %>
+              <%= image_tag "saved.png", class: "icon" %>
+              <% end %>
+                <h6 id="post-title"><a href="#"><%= link_to post.title, post%></a></h6>
             </div>
           </div>
-          <div class="tab" id="tab2">
-            <p><span>Module 2:</span> Pitching an Article Topic</p>
-            <%= image_tag "downarrow.png" %>
-          </div>
-          <div class="drop--down tab2--drop--down hidden">
-            <p>For years, people have been talking about “Keyword Research”.  That made sense in the days where using certain words in your headlines and in your posts would help you rank for searches including those words.  But that’s not how search works anymore, which is why “Keyword Research” is now a thing of the past.</p>
-            <div class="flex--start">
-              <p>0% completed</p>
-              <!-- TODO: Pitching an article topic -->
-              <%= link_to "Start", "/choosing-a-topic", class: "button_style" %>
-            </div>
-          </div>
-          <div class="tab" id="tab3">
-            <p><span>Module 3:</span> Formatting</p>
-            <%= image_tag "downarrow.png" %>
-          </div>
-          <div class="drop--down tab3--drop--down hidden">
-            <p>For years, people have been talking about “Keyword Research”.  That made sense in the days where using certain words in your headlines and in your posts would help you rank for searches including those words.  But that’s not how search works anymore, which is why “Keyword Research” is now a thing of the past.</p>
-            <div class="flex--start">
-              <p>0% completed</p>
-              <!-- TODO: Add formatting page -->
-              <%= link_to "Start", "/formatting", class: "button_style" %>
-            </div>
-          </div>
-          <div class="tab" id="tab4">
-            <p><span>Module 4:</span> Writing Your First Article</p>
-            <%= image_tag "downarrow.png" %>
-          </div>
-          <div class="drop--down tab4--drop--down hidden">
-            <p>For years, people have been talking about “Keyword Research”.  That made sense in the days where using certain words in your headlines and in your posts would help you rank for searches including those words.  But that’s not how search works anymore, which is why “Keyword Research” is now a thing of the past.</p>
-            <div class="flex--start">
-              <p>0% completed</p>
-              <!-- TODO: Add text editor here -->
-              <%= link_to "Start", "/writing-the-perfect-article", class: "button_style" %>
-            </div>
-          </div>
-          <div class="tab" id="tab5">
-            <p><span>Module 5:</span> Copyright and Finding Images</p>
-            <%= image_tag "downarrow.png" %>
-          </div>
-          <div class="drop--down tab5--drop--down hidden">
-            <p>For years, people have been talking about “Keyword Research”.  That made sense in the days where using certain words in your headlines and in your posts would help you rank for searches including those words.  But that’s not how search works anymore, which is why “Keyword Research” is now a thing of the past.</p>
-            <div class="flex--start">
-              <p>0% completed</p>
-              <%= link_to "Start", "/finding-images", class: "button_style" %>
-            </div>
-          </div>
-          <div class="tab" id="tab6">
-            <p><span>Module 6:</span> What Our Editors Look For</p>
-            <%= image_tag "downarrow.png" %>
-          </div>
-          <div class="drop--down tab6--drop--down hidden">
-            <p>For years, people have been talking about “Keyword Research”.  That made sense in the days where using certain words in your headlines and in your posts would help you rank for searches including those words.  But that’s not how search works anymore, which is why “Keyword Research” is now a thing of the past.</p>
-            <div class="flex--start">
-              <p>0% completed</p>
-              <!-- TODO: Check list that editors use -->
-              <%= link_to "Start", "/checklist", class: "button_style" %>
-            </div>
-          </div>
+          <% end %>
+          <br />
+          <%= link_to "New Article", new_post_path(@post), class: "newpost--new--profile" %>
         </div>
       </div>
       <div class="new--writer--flex--two">
         <div class="links">
           <div>
-            <%= link_to("Edit Profile", onboarding_path(:page => "your_profile")) %>
+            <a href="/users/<%= @user.slug %>/edit">Edit Profile</a>
+            <%= link_to("Change Password", edit_user_registration_path) %>
             <%= link_to("Review Onboarding", onboarding_path(:page => "welcome")) %>
           </div>
-          <%= link_to("Sign Out", destroy_user_session_path) %>
         </div>
         <br />
         <p>This is a new writer account. Your full writer account will be activated
-            once you finish the training modules.</p>
+            once you publish your first article.</p>
       </div>
     </div>
   </div>
