--- a/app/views/users/dashboard/_official_writer.html.erb
+++ b/app/views/users/dashboard/_official_writer.html.erb
@@ -46,11 +46,10 @@
   </div>
 
 <% if current_user && (current_user.id == @user.id || current_user.admin) %>
-
-<div class="flex--p">
-  <p>You're signed in as <%= @user.email %></p>
-  <p class="editlink--profile"><%= link_to "Edit Profile", edit_user_path(@user) %></p>
-</div>
+    <div class="flex--p">
+      <p>You're signed in as <%= @user.email %></p>
+      <p class="editlink--profile"><%= link_to "Edit Profile", edit_user_path(@user) %></p>
+    </div>
     <h1 id="page_title">Your Articles</h1>
 
       <% @user_posts.each do |post| %>
@@ -70,20 +69,14 @@
         <h6 id="date"><%= post.created_at.strftime('%A, %B %d') %></h6>
       </div>
       <% end %>
-
-      <p>
-        <%= link_to "New Post", new_post_path(@post), :class => "newpost--profile" %>
-      </p>
-
+      <p><%= link_to "New Post", new_post_path(@post), :class => "newpost--profile" %></p>
       <% @userHasCollaboration = false %>
-
       <% @posts.each do |post| %>
         <% if post.collaboration == @user.email %>
           <% if @userHasCollaboration == false %>
             <h1 id="page_title">Your Collaborations</h1>
             <% @userHasCollaboration = true %>
           <% end %>
-
           <div class="flex--postlist--item">
             <div class="inside--item">
               <% if post.approved && post.after_approved == true %>
@@ -101,9 +94,8 @@
           </div>
         <% end %>
       <% end %>
-
   </div>
-
+  <br />
   <div class="guidelines">
     <div class="thelink">
       <a href="/criteria">
