--- a/app/views/application_mailer/profile_approved.html.erb
+++ b/app/views/application_mailer/profile_approved.html.erb
@@ -10,7 +10,7 @@
   <body>
     <p>Hi <%= @user.first_name %>,</p>
     <p>This is Sewon from The Teen Magazine. I wanted to let you know that your profile was just approved by one of our editors,
-       and you are now eligible to submit articles for publication! Log into your account here: <bold style="color: blue;"><a href="https://www.theteenmagazine.com/login"<%= @user.slug%>>theteenmagazine.com/login</a></bold>.</p>
+       and you are now eligible to submit articles for publication! Log into your account here: <bold style="color: blue;"><a href="https://www.theteenmagazine.com/login"<%= @user.slug%>>theteenmagazine.com/login</a></bold> to see the changes.</p>
     <p>Best Regards,<br/>Sewon Park</p>
     <p>Editor in Chief</p>
   </body>
