small wording change

--- a/app/views/applies/new.html.erb
+++ b/app/views/applies/new.html.erb
@@ -21,7 +21,7 @@ pintrk('track', 'pagevisit');
   <li>Learn from and network with our talented writer community</li>
   <li>Apply for other positions and internships within The Teen Magazine</li>
 </ul>
-  <h1>Convinced? Apply now.</h1>
+  <h1>Convinced? Apply now</h1>
   <p>Because we only have a limited number of openings per month, please be thoughtful in your application and explain exactly why you would really love to write for The Teen Magazine. We can’t wait to read your submission!</p>
   <%= form_for @application do |f| %>
     <span>First Name</span>
@@ -37,7 +37,7 @@ pintrk('track', 'pagevisit');
     <%= f.select :category, ['Academics', 'Beauty', 'DIY', 'Entertainment', 'Fashion', 'Get Involved', 'Health & Fitness', 'Lifestyle', 'News', 'Tips & Hacks']%><br />
     <br />
     <br />
-    <span>Please write a one-page cover letter introducing yourself and describing why you would be a good fit for The Teen Magazine. Please include links to any previously published work/blog if applicable.
+    <span>Please write a one-page cover letter introducing yourself and describing why you would be a good fit for The Teen Magazine. Please include links to any previously published work/blog(s) if applicable.
     </span>
     <%= f.text_area :description, required: true %>
     <br />
