--- a/app/views/applies/new.html.erb
+++ b/app/views/applies/new.html.erb
@@ -5,7 +5,7 @@ pintrk('track', 'pagevisit');
 <!-- let someone create an application; sends to editor -->
 
 <div class="form_wrapper wrapper_padding">
-  <h1>Interested in getting a jumpstart on your future career today? Join the TTM Writer Community.</h1>
+  <h1>Interested in getting a jump-start on your future career today? Join the TTM Writer Community.</h1>
   <p>Here at The Teen Magazine, we are a close-knit group of young college and high school writers who work closely with one another to improve journalism skills,
     gain writing experience, and receive quality feedback from top-tier student journalists. Here is a video of TTM's founder and Editor in Chief explaining who we are a bit more!</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/9dsKTqtu1bw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
