--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -34,7 +34,7 @@
   .flex_other_articles {
     display: flex;
     flex-direction: column;
-    .one_article {
+    .ctgry_article {
       display: flex;
       flex-direction: row;
       margin: 10px 0;
@@ -417,7 +417,7 @@ hr {
   .flex--container--post--title {
     header {
       .date {
-        font-size: 0.8em;
+        font-size: 12px;
         color: #00b5f9;
         padding-bottom: 10px;
         font-family: 'Roboto Condensed', sans-serif;
