--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -66,7 +66,7 @@
       </div>
       <h1 class="section--title"><a href="/categories/health-fitness">Health & Fitness</a></h1>
       <div class="ctgry_section">
-        <% publishedPosts.where(meta_title: "Academics").all.order("created_at desc")[0..2].each do |post| %>
+        <% publishedPosts.where(meta_title: "Health & Fitness").all.order("created_at desc")[0..2].each do |post| %>
           <% featuredPostIds << post.id %>
           <div class="ctgry_article">
             <%=link_to(image_tag(post.thumbnail.url(:large2), alt: post.title), post )%>
