--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -1,11 +1,28 @@
 @import url('https://fonts.googleapis.com/css?family=Pacifico');
 
-.fundraiser_banner_article {
+.div {
+  height: 200px;
   width: 100%;
-  img {
-    width: 100%;
-    height: auto;
-  }
+  overflow: hidden;
+  z-index: 0;
+  position: absolute;
+}
+
+.post_image {
+  height: 220px;
+   position: absolute;
+  background-position: center;
+  width: 105%;
+  margin-left: -10px;
+  margin-top: -10px;
+  background-size: cover;
+  position: absolute;
+  -webkit-filter: blur(2px);
+  z-index: 0;
+  -moz-filter: blur(2px);
+  -o-filter: blur(2px);
+  -ms-filter: blur(2px);
+  filter: blur(2px);
 }
 
 .flex_wrapper_content {
