--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,106 +1,78 @@
 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-
 <style>
- .div {
-   height: 200px;
-   width: 100%;
-   overflow: hidden;
-   z-index: 0;
-   position: absolute;
-}
-
 .post_image {
-   background-image: url(<%= @post.thumbnail %>);
-   height: 220px;
-    position: absolute;
-   background-position: center;
-   width: 105%;
-   margin-left: -10px;
-   margin-top: -10px;
-   background-size: cover;
-   position: absolute;
-   -webkit-filter: blur(2px);
-   z-index: 0;
-   -moz-filter: blur(2px);
-   -o-filter: blur(2px);
-   -ms-filter: blur(2px);
-   filter: blur(2px);
+  background-image: url(<%= @post.thumbnail.url(:large2) %>);
 }
 </style>
 
-<% @collab = User.where(email:  @post.collaboration).first %>
+<% @collab = nil %>
+<% if @post.collaboration != "" %>
+  <% @collab = User.where(email: @post.collaboration).first %>
+<% end %>
 
 <div class="div">
   <div class="post_image">
   </div>
 </div>
-
 <div class="flex_wrapper_posts">
-<div class="skinny wrapper_padding" id="post_show_content">
-
-  <header id="post_title_show">
-    <h1 class="title_article_show"><%= @post.title %></h1>
-    <% if @post.category_id != nil %>
-      <h3><%= link_to(@post.meta_title, Category.where(name: @post.meta_title).first) %></h3>
-    <% else %>
-      <h3><%= @post.meta_title %></h3>
-    <% end %>
-    <div class="post_info">
-      <div class="left_side_flex">
-        <div class="authors">
-          <div class="one_author">
-            <% if @post.user.profile.exists? %>
-              <%= image_tag(@post.user.profile.url(:square), :class => "profile_img") %>
-            <% else %>
-              <%= image_tag("https://isw.fbk.eu/sites/isw2015.fbk.eu/files/Profilo_2.jpg", :class => "profile_img") %>
-            <% end %>
-            <p class="author" style="margin-right: 10px;">
-                By <%= link_to(@post.user.full_name, @user) %>
-          </div>
-          <div class="one_author second_author">
-            <% if @post.collaboration != nil || @post.collaboration != "" %>
-                <% if  @collab != nil %>
+  <div class="skinny wrapper_padding" id="post_show_content">
+    <header id="post_title_show">
+      <h1 class="title_article_show"><%= @post.title %></h1>
+      <h3><%= link_to(@post.category.name, @post.category) %></h3>
+      <div class="post_info">
+        <div class="left_side_flex">
+          <div class="authors">
+            <div class="one_author">
+              <% if @post.user.profile.exists? %>
+                <%= image_tag(@post.user.profile.url(:square), :class => "profile_img") %>
+              <% else %>
+                <%= image_tag("profile_image", :class => "profile_img") %>
+              <% end %>
+              <p class="author" style="margin-right: 10px;">
+                  By <%= link_to(@post.user.full_name, @user) %>
+            </div>
+            <div class="one_author second_author">
+              <% if @collab != nil %>
                   <% if @collab.profile.exists? %>
                     <%= image_tag(@collab.profile.url(:square), :class => "profile_img") %>
                   <% else %>
-                    <%= image_tag("https://isw.fbk.eu/sites/isw2015.fbk.eu/files/Profilo_2.jpg", :class => "profile_img") %>
+                    <%= image_tag("profile_image", :class => "profile_img") %>
                   <% end %>
                   <p class="author" style="margin-right: 10px;">
                     By <%= link_to(@collab.full_name, @collab) %></p>
               <% end %>
-            <% end %>
+            </div>
           </div>
+          <i class="fa fa-clock-o" style="margin-right: 3px;" aria-hidden="true"></i>
+          <p class="date"><%= @post.created_at.strftime('%A, %B %d')%></p>
         </div>
-        <i class="fa fa-clock-o" style="margin-right: 3px;" aria-hidden="true"></i>
-        <p class="date"><%= @post.created_at.strftime('%A, %B %d')%></p>
-      </div>
-      <div class="social_icons">
-        <a class="fb-share" href="//www.facebook.com/v2.3/dialog/feed?app_id=1190455601051741
-        &name=<%= @post.title %>
-        &description=<%= @post.meta_description %>
-        &link=http://www.theteenmagazine.com/<%= @post.slug %>">
-          <div>
-            <i aria-hidden="true" class="fa fa-facebook"></i>
+        <div class="social_icons">
+          <a class="fb-share" href="//www.facebook.com/v2.3/dialog/feed?app_id=1190455601051741
+          &name=<%= @post.title %>
+          &description=<%= @post.meta_description %>
+          &link=http://www.theteenmagazine.com/<%= @post.slug %>">
+            <div>
+              <i aria-hidden="true" class="fa fa-facebook"></i>
+            </div>
+         </a>
+        <a class="js-share-twitter-link" href="https://www.twitter.com/share?url=http://www.theteenmagazine.com/<%= @post.slug %>&text=<%= @post.title %> &via=theteenmagazin_" >
+          <div style="background-color: #55ACEE">
+            <i aria-hidden="true" class="fa fa-twitter"></i>
           </div>
        </a>
-      <a class="js-share-twitter-link" href="https://www.twitter.com/share?url=http://www.theteenmagazine.com/<%= @post.slug %>&text=<%= @post.title %> &via=theteenmagazin_" >
-        <div style="background-color: #55ACEE">
-          <i aria-hidden="true" class="fa fa-twitter"></i>
-        </div>
-     </a>
-     <a class="js-share-pinterest-link" href="//pinterest.com/pin/create/button/?url=http://www.theteenmagazine.com/<%=@post.slug%>&media=<%= @post.thumbnail.url(:large)%>&description=<%= @post.title %>  - TheTeenMagazine.com">
-       <div style="background-color: #cb2027">
-         <i aria-hidden="true" class="fa fa-pinterest"></i>
-       </div>
-    </a>
-     <a title="Email" href="mailto:?subject=<%= @post.title %>&body=http://www.theteenmagazine.com/<%= @post.slug %>" target="_top">
-       <div  style="background-color: #333">
-         <i aria-hidden="true" class="fa fa-envelope-o"></i>
-       </div>
-     </a>
-    </div>
-    </div>
-  </header>
+       <a class="js-share-pinterest-link" href="//pinterest.com/pin/create/button/?url=http://www.theteenmagazine.com/<%=@post.slug%>&media=<%= @post.thumbnail.url(:large)%>&description=<%= @post.title %>  - TheTeenMagazine.com">
+         <div style="background-color: #cb2027">
+           <i aria-hidden="true" class="fa fa-pinterest"></i>
+         </div>
+      </a>
+       <a title="Email" href="mailto:?subject=<%= @post.title %>&body=http://www.theteenmagazine.com/<%= @post.slug %>" target="_top">
+         <div  style="background-color: #333">
+           <i aria-hidden="true" class="fa fa-envelope-o"></i>
+         </div>
+       </a>
+      </div>
+      </div>
+    </header>
 
   <div id="content">
     <div class="flex_wrapper_content">
@@ -125,59 +97,57 @@
         <% end %>
         <div id= "background">
          <%= render :partial => 'users/profile' %>
-         <% @users.each do |user| %>
-           <% if user.email == @post.collaboration %>
-             <div class="flex--profile" style="margin-top: -40px">
-               <% if user.profile.exists? %>
-                 <%= image_tag(user.profile.url(:square), :class => "profile_img") %>
-               <% else %>
-                 <%= image_tag("https://isw.fbk.eu/sites/isw2015.fbk.eu/files/Profilo_2.jpg", :class => "profile_img") %>
-               <% end %>
-               <div class="info">
-               <h2 style="margin-bottom: 5px;">
-               <% @name =
-                 if (user.first_name != "" && user.first_name !=nil)
-                   user.first_name
-                 end
-                 if (user.last_name != "" && user.last_name!= nil)
-                   @name = @name + " " + user.last_name
-                 end %>
-               <%= link_to(@name, user) %>
-               </h2>
-               <% if user.editor? %>
-                 <span class="editor_status">
-                   Editor
-                 </span>
-               <% end %>
-               <% if (user.description != "" && user.description != nil) %>
-                 <p class="description_user" style="margin-top: 5px;"><%= user.description %></p>
-               <% end %>
-                 <div class="website">
-                   <% if (user.website != "" && user.website !=  nil) %>
-                      <p class="website_link"><span>Website: </span><a href="<%= user.website %>" target="_blank"><%= user.website %></a></p>
-                   <% end %>
-                   <% if (user.twitter != "" && user.twitter !=  nil) %>
-                      <p class="website_link"><a href="<%= user.twitter %>" target="_blank"><i class="fa fa-twitter" aria-hidden="false"></i></a></p>
-                   <% end %>
-                   <% if (user.insta != "" && user.insta != nil) %>
-                      <p class="website_link"><a href="<%= user.insta %>" target="_blank" style="padding-right: 4px;"><i class="fa fa-instagram" aria-hidden="false"></i></a>
-                   <% end %>
-                   <% if (user.facebook != "" && user.facebook !=  nil) %>
-                      <p class="website_link"><a href="<%= user.facebook %>" target="_blank" style="padding-left: 5px;"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></p>
-                   <% end %>
-                   <% if (user.youtube != "" && user.youtube != nil) %>
-                      <p class="website_link"><a href="<%= user.youtube %>" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a></p>
-                   <% end %>
-                   <% if (user.pintrest != "" && user.pintrest != nil) %>
-                      <p class="website_link"><a href="<%= user.pintrest %>" target="_blank"><i class="fa fa-pinterest" aria-hidden="true"></i></a></p>
-                   <% end %>
-                   <% if (user.snap != "" && user.snap != nil) %>
-                      <p class="website_link"><a href="<%= user.snap %>" target="_blank"><i class="fa fa-snapchat" aria-hidden="true"></i></a></p>
-                   <% end %>
-                 </div>
+         <% if @collab != nil %>
+           <div class="flex--profile" style="margin-top: -40px">
+             <% if @collab.profile.exists? %>
+               <%= image_tag(@collab.profile.url(:square), :class => "profile_img") %>
+             <% else %>
+               <%= image_tag("profile_image", :class => "profile_img") %>
+             <% end %>
+             <div class="info">
+             <h2 style="margin-bottom: 5px;">
+             <% @name =
+               if (@collab.first_name != "" && @collab.first_name !=nil)
+                 @collab.first_name
+               end
+               if (@collab.last_name != "" && @collab.last_name!= nil)
+                 @name = @name + " " + @collab.last_name
+               end %>
+             <%= link_to(@name, @collab) %>
+             </h2>
+             <% if @collab.editor? %>
+               <span class="editor_status">
+                 Editor
+               </span>
+             <% end %>
+             <% if (@collab.description != "" && @collab.description != nil) %>
+               <p class="description_user" style="margin-top: 5px;"><%= @collab.description %></p>
+             <% end %>
+               <div class="website">
+                 <% if (@collab.website != "" && @collab.website !=  nil) %>
+                    <p class="website_link"><span>Website: </span><a href="<%= @collab.website %>" target="_blank"><%= @collab.website %></a></p>
+                 <% end %>
+                 <% if (@collab.twitter != "" && @collab.twitter !=  nil) %>
+                    <p class="website_link"><a href="<%= @collab.twitter %>" target="_blank"><i class="fa fa-twitter" aria-hidden="false"></i></a></p>
+                 <% end %>
+                 <% if (@collab.insta != "" && @collab.insta != nil) %>
+                    <p class="website_link"><a href="<%= @collab.insta %>" target="_blank" style="padding-right: 4px;"><i class="fa fa-instagram" aria-hidden="false"></i></a>
+                 <% end %>
+                 <% if (@collab.facebook != "" && @collab.facebook !=  nil) %>
+                    <p class="website_link"><a href="<%= @collab.facebook %>" target="_blank" style="padding-left: 5px;"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></p>
+                 <% end %>
+                 <% if (@collab.youtube != "" && @collab.youtube != nil) %>
+                    <p class="website_link"><a href="<%= @collab.youtube %>" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a></p>
+                 <% end %>
+                 <% if (@collab.pintrest != "" && @collab.pintrest != nil) %>
+                    <p class="website_link"><a href="<%= @collab.pintrest %>" target="_blank"><i class="fa fa-pinterest" aria-hidden="true"></i></a></p>
+                 <% end %>
+                 <% if (@collab.snap != "" && @collab.snap != nil) %>
+                    <p class="website_link"><a href="<%= @collab.snap %>" target="_blank"><i class="fa fa-snapchat" aria-hidden="true"></i></a></p>
+                 <% end %>
                </div>
              </div>
-           <% end %>
+           </div>
          <% end %>
         </div>
         <br />
