--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -174,9 +174,9 @@
         </div>
         <div class="articles">
           <div class="flex_other_articles">
-            <h3 class="title">Trending in <%= link_to(@post.meta_title, Category.where(name: @post.meta_title).first) %></h3>
+            <h3 class="title">Trending in <%= link_to(@post.category.name, @post.category) %></h3>
             <div class="contain_articles">
-              <% Post.approved.order("post_impressions desc").where(meta_title: @post.meta_title)[0..6].each do |post| %>
+              <% @post.category.posts.order("post_impressions desc")[0..6].each do |post| %>
                 <div class="ctgry_article">
                    <%= link_to(image_tag(post.thumbnail.url(:medium)), post) %>
                   <div class="paragraph">
